<resources>
    <string name="app_name">Mascotas</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Usuario nuevo</string>
    <string name="title_activity_registro">registro</string>
    <string name="start">Empezar</string>
    <string name="pet_name">Nombre de la mascota</string>
    <string name="age">Edad</string>
    <string name="raza">Raza</string>
    <string name="email">Correo Electrónico</string>

    <string name="habitos">Hábitos Saludables</string>
    <string name="tips_titulo">Foro y Tips</string>
    <string name="patita">Dar la patita</string>
    <string name="sentar">Sentarse</string>
    <string name="pelota">Ir por la pelota</string>
    <string name="tips">¿Qué necesitas para ser el mejor dueño?</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="correo">Correo Electrónico</string>
    <string name="recuperar">Recuperar Contraseña</string>

    <string name="calendario">Calendario</string>
    <string name="my_pets">Mis Mascotas</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="articulos">Articulos</string>
    <string name="emergencias">Emergencias</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="registro">Registro</string>
    <string name="title_activity_mis_mascotas">mis_mascotas</string>
    <string name="title_activity_registro_user">registro_user</string>
    <string name="title_activity_menu2">Menu2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>