<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro"
    android:orientation="vertical">


    <TextView
        android:id="@+id/login"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/borde_redondo"
        android:fontFamily="@font/alata_regular"
        android:paddingHorizontal="60dp"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="221dp"
        android:layout_height="214dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_a_color"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/mascota"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo_transparente"
        android:fontFamily="@font/alata_regular"
        android:hint="@string/pet_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/raza"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo_transparente"
        android:fontFamily="@font/alata_regular"
        android:hint="@string/raza"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo_transparente"
        android:fontFamily="@font/alata_regular"
        android:hint="@string/age"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>



    <Button
        android:id="@+id/registrar"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:background="@drawable/borde_redondo_transparente"
        android:fontFamily="@font/alata_regular"
        android:paddingHorizontal="60dp"
        android:paddingVertical="0dp"
        android:text="@string/start"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>