<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entrenamiento_menu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_action_name"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entrenamiento"
            android:layout_gravity="center"
            android:background="@drawable/borde_redondo"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata_regular"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingHorizontal="30dp"
            android:textSize="30sp"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/patita"
        android:background="@drawable/borde_redondo_rojo"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/alata_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="80dp"
        android:paddingVertical="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sentar"
        android:background="@drawable/borde_redondo_rojo"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/alata_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="110dp"
        android:paddingVertical="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pelota"
        android:background="@drawable/borde_redondo_rojo"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/alata_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="70dp"
        android:paddingVertical="30dp"/>

</LinearLayout>